# JMS

./: .buildinfo  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.provision  Dockerfile.ui  NOTES  README.md  cargo_cap.sh  docker-build-provision.sh  docker-build.ps1  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  docker-copy-to-primary.sh  docker-entrypoint.sh  docker-push-dev.ps1  genindex.html  go.mod  go.sum  index.html  jms-config.yml  main.go  notes.md  objects.inv  package.json  prolog.html  rustfmt.toml  schema.json  search.html  searchindex.js  update-images.sh
electronics/jms-ufe-firwmare/: Cargo.toml  build.rs  openocd.cfg
electronics/jms-ufe-firwmare/modbus/: Cargo.toml
electronics/jms-ufe-firwmare/modbus/src/: lib.rs
electronics/jms-ufe-firwmare/src/: main.rs  net.rs
electronics/scoring-table/scoring-table-software/: Cargo.toml  memory.x  openocd.cfg
electronics/scoring-table/scoring-table-software/.cargo/: config.toml
jms/: .env  Cargo.toml  Notes.md  Rocket.toml  backup.sh  build.rs  diesel.toml  schema.json
jms-arena/: Cargo.toml  Dockerfile  Dockerfile.dev
jms-arena/.devcontainer/: devcontainer.json
jms-arena/jms-arena-lib/: Cargo.toml
jms-arena/jms-arena-lib/src/: lib.rs
jms-arena/src/: main.rs  matches.rs
jms-backup/jms-backup-lib/: Cargo.toml
jms-backup/jms-backup-lib/src/: lib.rs
jms-base/: Cargo.toml  Dockerfile
jms-base/src/: kv.rs  lib.rs  logging.rs  mq.rs  rabbit.rs  redis.rs
jms-core/: Cargo.toml  Dockerfile.dev
jms-core/.devcontainer/: devcontainer.json
jms-core/jms-core/: Cargo.toml
jms-core/jms-core-lib/: Cargo.toml
jms-core/jms-core-lib/src/: db.rs  lib.rs  reports.rs
jms-core/jms-core-lib/src/models/: alliances.rs  (+11 more)
jms-core/jms-core-ui/: package.json
jms-core/jms-core-ui/public/: index.html
jms-core/src/: main.rs  scoring.rs
jms-core/src/reports/: award_report.rs  match_report.rs  mod.rs  rankings_report.rs  service.rs  team_report.rs  wpa_key_report.rs
jms-core/src/schedule/: bracket.rs  mod.rs  playoffs.rs  quals.rs  quals_randomiser.rs
jms-driverstation/: Cargo.toml
jms-driverstation/jms-driverstation-lib/: Cargo.toml
jms-driverstation/jms-driverstation-lib/src/: lib.rs
jms-driverstation/src/: connector.rs  main.rs  tcp_codec.rs  udp_codec.rs
jms-electronics/: Cargo.toml
jms-electronics/jms-electronics-lib/: Cargo.toml
jms-electronics/jms-electronics-lib/src/: lib.rs
jms-electronics/src/: ds_electronics.rs  electronics.rs  main.rs  network.rs
jms-match-logs/: Cargo.toml
jms-match-logs/jms-match-logs-lib/: Cargo.toml
jms-match-logs/jms-match-logs-lib/src/: lib.rs
jms-match-logs/src/: main.rs
jms-networking/: Cargo.toml
jms-networking/jms-networking-lib/: Cargo.toml
jms-networking/jms-networking-lib/src/: lib.rs
jms-networking/resources/: pfsense_config.php
jms-networking/src/: imaging.rs  linksys_ap.rs  main.rs  mikrotik.rs  pfsense.rs  ssh.rs  unifi.rs
jms-radio-config/: Cargo.toml
jms-radio-config/src/: imager.rs  main.rs
jms-tba/: Cargo.toml
jms-tba/jms-tba-lib/: Cargo.toml
jms-tba/jms-tba-lib/src/: lib.rs
jms-tba/src/: alliances.rs  client.rs  eventinfo.rs  main.rs  matches.rs  rankings.rs  teams.rs
jms-util/: Cargo.toml
jms-util/src/: lib.rs  net.rs
jms-util/src/linux/: net.rs
jms-util/src/windows/: net.rs
jms-util/tests/: net_test.rs
jms-websocket/: Cargo.toml  schema.json
jms-websocket/jms-websocket-macros/: Cargo.toml
jms-websocket/jms-websocket-macros/src/: lib.rs
jms-websocket/src/: alliances.rs  arena.rs  audience.rs  awards.rs  backups.rs  components.rs  debug.rs  electronics.rs  event.rs  handler.rs  logs.rs  main.rs  matches.rs  networking.rs  reports.rs  scoring.rs  tba.rs  teams.rs  tickets.rs  user.rs  ws.rs
jms/jms-macros/: Cargo.toml
jms/jms-macros/src/: lib.rs
jms/jms-macros/tests/: define_websocket_msg_test.rs
jms/migrations/2021-05-05-063103_create_teams/: down.sql  up.sql
jms/migrations/2021-07-09-152045_create_matches/: down.sql  up.sql
jms/migrations/2021-07-13-154919_create_event_details/: down.sql  up.sql
jms/migrations/2021-07-17-044249_create_schedule_blocks/: down.sql  up.sql
jms/migrations/2021-07-18-053158_create_match_generation_records/: down.sql  up.sql
jms/migrations/2021-07-20-152814_add_match_generation_record_to_matches/: down.sql  up.sql
jms/migrations/2021-07-24-151657_create_playoff_alliances/: down.sql  up.sql
jms/migrations/2021-07-28-094628_create_team_rankings/: down.sql  up.sql
jms/migrations/2021-07-31-131727_add_match_subtype/: up.sql
jms/migrations/2021-07-31-144422_add_alliance_to_match/: up.sql
jms/migrations/2021-08-01-190152_create_awards/: up.sql
jms/migrations/2021-08-06-111429_add_wpakey_to_teams/: up.sql
jms/migrations/2021-08-11-142932_add_score_time_to_match/: up.sql
jms/migrations/2021-08-16-100258_add_scheduled_to_teams/: up.sql
jms/service-configs/: match.dhcp.conf  match.firewall.rules
jms/src/: config.rs  imaging.rs  lib.rs  main.rs  main2.rs  main3.rs  schema.rs
jms/src/arena/: arena.rs  audience.rs  exceptions.rs  lighting.rs  matches.rs  mod.rs  panel.rs  resource.rs  state.rs  station.rs
jms/src/db/: backup.rs  bindings.rs  mod.rs  store.rs  table.rs  types.rs
jms/src/discord/: mod.rs
jms/src/ds/: connector.rs  mod.rs  tcp_codec.rs  udp_codec.rs
jms/src/electronics/: comms.rs  lights.rs  mod.rs  service.rs  settings.rs
jms/src/logging/: mod.rs
jms/src/models/: alliances.rs  awards.rs  event_details.rs  fta.rs  matches.rs  mod.rs  rankings.rs  resources.rs  schedule.rs  station_record.rs  team.rs  tickets.rs
jms/src/network/: mod.rs
jms/src/reports/: award_report.rs  match_report.rs  mod.rs  rankings_report.rs  team_report.rs  wpa_report.rs
jms/src/schedule/: bracket.rs  mod.rs  playoffs.rs  quals.rs  randomiser.rs  round_robin.rs  worker.rs
jms/src/scoring/: mod.rs  scores.rs
jms/src/tba/: alliances.rs  awards.rs  eventinfo.rs  matches.rs  mod.rs  rankings.rs  teams.rs
jms/src/ui/: mod.rs
jms/src/utils/: bufutil.rs  danger.rs  mod.rs  service_configs.rs  ssh.rs  templates.rs
(+619 files in other folders)
