[package]
name = "jms"
version = "0.1.0"
authors = ["Jaci Brunning <jaci.brunning@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.7.0"
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"
clap = "2.33.3"
lazy_static = "1.4.0"
lexical_bool = "0.1.3"
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.11"
ipnetwork = "0.18.0"
scopeguard = "1.1.0"
regex = "1.4.6"