[workspace]
members = [
  "jms-base",
  "jms-macros",
  "jms-arena/jms-arena-lib",
  "jms-arena",
  "jms-core/jms-core-lib",
  "jms-core",
  "jms-driverstation",
  "jms-util",
  "jms-radio-config",
  "jms-websocket",
  "jms-websocket/jms-websocket-macros",
  "jms-tba",
  "jms-tba/jms-tba-lib"
]