[workspace]
members = [
  "jms-base",
  "jms-macros",
  "jms-arena/jms-arena-lib",
  "jms-arena",
  "jms-core/jms-core-lib",
  "jms-core",
  "jms-driverstation",
  "jms-util",
  "jms-radio-config",
  "jms-websocket",
  "jms-websocket/jms-websocket-macros",
  "jms-tba",
  "jms-tba/jms-tba-lib",
  "jms-networking",
  "jms-networking/jms-networking-lib",
  "jms-electronics",
  "jms-match-logs",
  "jms-match-logs/jms-match-logs-lib",
  "jms-backup",
  "jms-backup/jms-backup-lib"
]