[package]
name = "jms-arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jms-arena-lib = { path = "jms-arena-lib" }
jms-base = { path = "../jms-base" }
jms-core-lib = { path = "../jms-core/jms-core-lib" }
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
log = "0.4.19"
futures = "0.3.28"
serde = "1.0.171"
serde_json = "1.0.103"
chrono = "0.4.26"
async-trait = "0.1.71"
tokio-scoped = "0.2.0"
