[package]
name = "jms-base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = [ "serde" ] }
env_logger = "0.10.0"
log = "0.4.19"
redis = { version = "0.23.0", features = [ "aio", "tokio-comp", "json" ] }
lapin = "2.3.1"
gethostname = "0.4.3"
serde = "1.0.171"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.71"
