[package]
name = "jms-driverstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.26"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["net", "codec"] }
jms-arena-lib = { path = "../jms-arena/jms-arena-lib" }
jms-base = { path = "../jms-base" }
jms-core-lib = { path = "../jms-core/jms-core-lib" }
jms-driverstation-lib = { path = "jms-driverstation-lib" }
bitvec = "1.0.1"
log = "0.4.19"
futures = "0.3.28"
anyhow = "1.0.72"
