[package]
name = "jms-electronics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.31.0", features = ["full"] }
jms-base = { path = "../jms-base" }
jms-core-lib = { path = "../jms-core/jms-core-lib" }
jms-arena-lib = { path = "../jms-arena/jms-arena-lib" }
jms-driverstation-lib = { path = "../jms-driverstation/jms-driverstation-lib" }
tokio-serial = "5.4.4"
log = "0.4.20"
deku = "0.16.0"
bytes = "1.4.0"
tokio-util = { version = "0.7.8", features = ["net", "codec"] }
futures-util = "0.3.28"
futures = "0.3.28"
