[package]
name = "jms-match-logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
jms-arena-lib = { path = "../jms-arena/jms-arena-lib" }
jms-base = { path = "../jms-base" }
jms-core-lib = { path = "../jms-core/jms-core-lib" }
jms-driverstation-lib = { path = "../jms-driverstation/jms-driverstation-lib" }
jms-match-logs-lib = { path = "jms-match-logs-lib" }
log = "0.4.20"
tokio = "1.31.0"
