[package]
name = "jms-radio-config"
version = "0.1.0"
edition = "2021"

[dependencies]
jms-util = { path = "../jms-util" }
anyhow = "1.0.42"
cursive= { version = "0.16.3", features=["crossterm-backend"] }
futures = "0.3.11"
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["full"] }
tokio-stream = { version = "0.1.5" }
crossbeam = "0.8.2"