[package]
name = "jms-tba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jms-tba-lib = { path = "./jms-tba-lib" }
jms-base = { path = "../jms-base" }
jms-core-lib = { path = "../jms-core/jms-core-lib" }
reqwest = "0.11.18"
tokio = { version = "1.30.0", features = ["full"] }
serde = "1.0.183"
schemars = "0.8.12"
anyhow = "1.0.72"
log = "0.4.19"
serde_json = "1.0.104"
md5 = "0.7.0"
serde_repr = "0.1.16"
chrono = "0.4.26"
