[package]
name = "jms-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink="0.8.0"
futures = "0.3.11"
ipnetwork = "0.18.0"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"