[package]
name = "jms-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
futures = "0.3.11"
ipnetwork = "0.18.0"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink="0.8.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.39.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
]