[package]
name = "jms"
version = "0.1.0"
authors = ["Jaci Brunning <jaci.brunning@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.7.0"
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"
clap = "2.33.3"
lazy_static = "1.4.0"
lexical_bool = "0.1.3"
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["full"] }
tokio-stream = { version = "0.1.5" }
futures = "0.3.11"
ipnetwork = "0.18.0"
scopeguard = "1.1.0"
regex = "1.4.6"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
rand = "0.8.3"
strum = "0.11.0"
strum_macros = "0.11.0"
enum-as-inner = "0.3.3"
bytes = "1.0.1"
byteorder = "1.4.3"
bitvec = "0.22.3"
tokio-tungstenite = "0.14.0"
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
async-trait = "0.1.50"
rust-embed="5.9.0"
handlebars = "4.1.0"
dbus = "0.9.3"
dbus-tokio = "0.7.3"
tempfile = "3.2.0"
sysctl = "0.4.1"
nalgebra = "0.27.1"
genpdf = "0.2.0"
rocket = "0.5.0-rc.1"
serde_yaml = "0.8.17"
anyhow = "1.0.42"
thiserror = "1.0.26"
ssh2 = "0.9.1"
prost = "0.8.0"
prost-types = "0.8"
