[package]
authors = ["Jaci Brunning <jaci.brunning@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "jms-ufe-firwmare"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m-rtic = "1.1"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
stm32h7xx-hal = { version = "0.13.1", features = ["stm32h743v", "rt", "ethernet"]}
smoltcp = { version = "0.8.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "proto-igmp", "socket-raw", "socket-tcp", "socket-udp"] }
modbus = { path = "modbus" }
panic-semihosting = "0.6.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "jms-ufe-firwmare"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[workspace]
