[package]
name = "jms-arena-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.12"
serde = "1.0.171"
jms-macros = { path = "../../jms-macros" }
jms-base = { path = "../../jms-base" }
jms-core-lib = { path = "../../jms-core/jms-core-lib" }
async-trait = "0.1.71"
anyhow = "1.0.72"
log = "0.4.19"
strum = { version = "0.25.0", features = ["derive"] }
