[package]
name = "jms-core-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
jms-base = { path = "../../jms-base" }
rand = "0.8.5"
redis-macros = "0.2.1"
schemars = { version = "0.8.12", features = ["chrono"] }
serde = "1.0.174"
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
