[package]
name = "jms-match-logs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jms-core-lib = { path = "../../jms-core/jms-core-lib" }
jms-driverstation-lib = { path = "../../jms-driverstation/jms-driverstation-lib" }
schemars = "0.8.12"
serde = "1.0.183"
