[package]
name = "jms-tba-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
jms-base = { path = "../../jms-base" }
jms-core-lib = { path = "../../jms-core/jms-core-lib" }
jms-macros = { path = "../../jms-macros" }
schemars = "0.8.12"
serde = "1.0.183"
