[package]
name = "jms-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
schemars = { version = "0.8", features=["chrono"] }
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.64"